--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "dicemasters-",
-  "version": "0.0.1",
+  "name": "dicemasters-cards",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "dm-lookup": "^1.1.0",
     "express": "4.10.6",
     "socket.io": "1.2.1",
     "underscore": "1.7.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.3",
+    "gulp-html-src": "^0.2.0",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-minify-html": "^0.1.8",
+    "gulp-uglify": "^1.0.2",
+    "gulp-usemin": "^0.3.8"
   }
 }
