several improvements but broke build minification somehow

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "underscore": "1.7.0"
   },
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
     "gulp-html-src": "^0.2.0",
