--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-animate": "~1.3.8",
     "socket.io-client": "~1.2.1",
     "underscore": "~1.7.0",
-    "bootswatch": "~3.3.1+2"
+    "bootswatch": "~3.3.1+2",
+    "ngprogress": "~1.0.7"
   }
 }
