--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "underscore": "1.7.0"
   },
   "devDependencies": {
-    "del": "^1.1.1",
     "gulp": "^3.8.10",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.3",
-    "gulp-html-src": "^0.2.0",
+    "gulp-dom-src": "^0.1.1",
+    "gulp-html-replace": "^1.4.3",
     "gulp-minify-css": "^0.3.11",
     "gulp-minify-html": "^0.1.8",
     "gulp-uglify": "^1.0.2",
-    "gulp-usemin": "^0.3.8"
+    "run-sequence": "^1.0.2"
   }
 }
